remove hardcoded layer ids from example/node/index.js

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-STORYBOOK_AUTH_TOKEN=
-# Env var STORYBOOK_INSTANCE_ID should be set to the ID of some instance in Sentinel Hub
+CLIENT_ID=
+CLIENT_SECRET=
+
+# Env var INSTANCE_ID should be set to the ID of some instance in Sentinel Hub
 # Configurator, which contains all the layers listed below it.
-STORYBOOK_INSTANCE_ID=
-STORYBOOK_S2L2A_LAYER_ID=
+INSTANCE_ID=
+S2L2A_LAYER_ID=
+S1GRD_LAYER_ID=
