--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@turf/helpers": "^6.1.4",
     "@types/xml2js": "^0.4.4",
     "axios": "^0.18.1",
+    "jest": "^25.1.0",
     "query-string": "^6.4.2",
     "xml2js": "^0.4.19"
   },
@@ -31,8 +32,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build",
+    "test": "jest",
     "lint": "eslint --max-warnings 0 --ext .ts,js src/",
     "prettier": "prettier --write \"{src,example}/**/*.{ts,js}\"",
     "storybook": "start-storybook -p 6006",
