--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -16,3 +16,7 @@ jobs:
         run: |
           npm install
           npm run lint
+
+      - name: Run tests
+        run: |
+          npm run jest
