--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
       "js"
     ],
     "transform": {
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+      "\\.(ts|tsx)$": "ts-jest"
     },
     "moduleDirectories": [
       "node_modules",
