--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "noImplicitAny": true,
     "outDir": "./dist",
     "target": "es2016",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "esModuleInterop": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
