--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "module": "dist/sentinelHub.esm.js",
   "browser": "dist/sentinelHub.umd.js",
   "dependencies": {
+    "@turf/area": "^6.0.1",
     "@turf/helpers": "^6.1.4",
+    "@turf/intersect": "^6.1.3",
+    "@turf/union": "^6.0.3",
     "@types/xml2js": "^0.4.4",
     "axios": "^0.18.1",
     "query-string": "^6.4.2",
