Re-add default typeRoots (fix failing tests)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "target": "es2016",
     "moduleResolution": "node",
     "typeRoots": [
-      "src/customTypings/@types/union"
+      "src/customTypings/@types/union",
+      "node_modules/@types"
     ],
     "esModuleInterop": true
   },
