Fix findTiles() for Landsat8 on AWS

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ S3OLCI_LAYER_ID=
 BYOC_LAYER_ID=
 BYOC_COLLECTION_ID=
 S5PL2_LAYER_ID=
+LANDSAT8_LAYER_ID=
 
 EOC_INSTANCE_ID=
 EOC_S1GRDIW_LAYER_ID=
