--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
   "dependencies": {
     "@turf/area": "^6.0.1",
     "@turf/helpers": "^6.1.4",
-    "@turf/intersect": "^6.1.3",
-    "@turf/union": "^6.0.3",
     "@types/xml2js": "^0.4.4",
     "axios": "^0.18.1",
+    "polygon-clipping": "^0.14.3",
     "query-string": "^6.4.2",
     "xml2js": "^0.4.19"
   },
