Use Moment.js for all findTiles/findFlyovers times

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@turf/helpers": "^6.1.4",
     "@types/xml2js": "^0.4.4",
     "axios": "^0.18.1",
+    "moment": "^2.24.0",
     "polygon-clipping": "^0.14.3",
     "query-string": "^6.4.2",
     "xml2js": "^0.4.19"
