change findDates for AbstractSentinelHubV3Layer similar to AbstractSentinelHubV1OrV2Layer

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ INSTANCE_ID=
 S1GRDIW_LAYER_ID=
 S1GRDEW_LAYER_ID=
 S2L2A_LAYER_ID=
+S2L1C_LAYER_ID=
 S3SLSTR_LAYER_ID=
 S3OLCI_LAYER_ID=
 BYOC_LAYER_ID=
