add findflyovers example to s2grd ew stories, run prettier on stories too

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dev": "rollup -c -w",
     "test": "jest",
     "lint": "eslint --max-warnings 0 --ext .ts,js src/",
-    "prettier": "prettier --write \"{src,example}/**/*.{ts,js}\"",
+    "prettier": "prettier --write \"{src,example,stories}/**/*.{ts,js}\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
