Use named parameters for layer constructors

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
       "node_modules",
       "."
     ],
-    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
+    "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
   },
   "types": "dist/index.d.ts",
   "files": [
