--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "prettier": "prettier --write \"{src,example,stories}/**/*.{ts,js}\"",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "build-doc": "typedoc --excludePrivate --excludeProtected --out doc/ src/"
+    "build-doc": "typedoc --excludePrivate --excludeProtected --excludeNotExported --exclude '**/*__*' --out doc/ src/"
   },
   "jest": {
     "moduleFileExtensions": [
