move consts from LayerFactory to const.ts and parseSHInstanceId to utils.ts

--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
       "."
     ],
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": ["/node_modules/", "/dist/"]
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ]
   },
   "types": "dist/index.d.ts",
   "files": [
