--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@ S3SLSTR_LAYER_ID=
 S3OLCI_LAYER_ID=
 BYOC_LAYER_ID=
 BYOC_COLLECTION_ID=
+BYOC_BBOX_EPSG3857_MINX=
+BYOC_BBOX_EPSG3857_MINY=
+BYOC_BBOX_EPSG3857_MAXX=
+BYOC_BBOX_EPSG3857_MAXY=
 S5PL2_LAYER_ID=
 LANDSAT8_LAYER_ID=
 
