add stories for L8@AWS with evalscript V2 and V3

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,7 @@ BYOC_BBOX_EPSG3857_MAXY=
 S5PL2_LAYER_ID=
 LANDSAT8_LAYER_ID=
 LANDSAT8_NDVI_LAYER_ID=
+LANDSAT8_NDVI_V3_LAYER_ID=
 
 EOC_INSTANCE_ID=
 EOC_S1GRDIW_LAYER_ID=
