use concurently to run 2 npm scripts in parallel

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "babel-loader": "^8.0.6",
+    "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.2.0",
@@ -42,7 +43,7 @@
     "test": "TZ=Europe/Ljubljana jest",
     "lint": "eslint --max-warnings 0 --ext .ts,js src/",
     "prettier": "prettier --write \"{src,example,stories}/**/*.{ts,js}\"",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "concurrently --kill-others \"rollup -c -w\" \"start-storybook -p 6006\"",
     "build-storybook": "build-storybook",
     "build-doc": "typedoc --excludePrivate --excludeProtected --excludeNotExported --exclude '**/*__*' --out doc/ src/"
   },
