--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "polygon-clipping": "^0.14.3",
     "query-string": "^6.4.2",
     "terraformer-wkt-parser": "^1.2.1",
+    "text-encoding": "^0.7.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
     "@storybook/html": "^5.3.3",
     "@types/jest": "^25.1.3",
+    "@types/text-encoding": "0.0.35",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "babel-loader": "^8.0.6",
