--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^25.1.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "axios-mock-adapter": "^1.18.1",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
