--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "/dist/"
+      "/dist/",
+      "[.]fixtures[.]ts"
     ]
   },
   "types": "dist/index.d.ts",
