rename fixtures file to reflect type off call it is making

--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist/",
-      "[.]fixtures[.]ts"
+      "fixtures[.][*][.]ts"
     ]
   },
   "types": "dist/index.d.ts",
