fix issue where fixtures were not ignored

--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist/",
-      "^fixtures[.].*[.]ts"
+      "[.]fixtures[.]ts",
+      "fixtures[.].*[.]ts"
     ]
   },
   "types": "dist/index.d.ts",
