--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.8.3",
     "@storybook/html": "^5.3.3",
     "@types/jest": "^25.1.3",
+    "@types/node-fetch": "^2.5.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "axios-mock-adapter": "^1.18.1",
@@ -31,6 +32,7 @@
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^25.1.0",
+    "node-fetch": "^2.6.0",
     "prettier": "^1.17.1",
     "rollup": "^0.67.0",
     "rollup-plugin-commonjs": "^9.1.0",
