fix path to declaration file

--- a/package.json
+++ b/package.json
@@ -72,9 +72,9 @@
       "fixtures[.].*[.]ts"
     ]
   },
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist",
-    "dist/index.d.ts"
+    "dist/src/index.d.ts"
   ]
 }
