--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
       "/node_modules/",
       "/dist/",
       "fixtures[.].*[.]ts",
-      "testUtils.findTiles.ts"
+      "testUtils[.].*[.]ts"
     ]
   },
   "types": "dist/src/index.d.ts",
