--- a/.env.example
+++ b/.env.example
@@ -25,3 +25,7 @@ EOC_S1GRDIW_LAYER_ID=
 EOC_LANDSAT5_LAYER_ID=
 EOC_LANDSAT7_LAYER_ID=
 EOC_LANDSAT8_LAYER_ID=
+
+DEM_MAPZEN_LAYER_ID=
+DEM_COPERNICUS_30_LAYER_ID=
+DEM_COPERNICUS_90_LAYER_ID=
