Allow replacing hostnames to enable redirecting traffic to staging and testing deployments

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 CLIENT_ID=
 CLIENT_SECRET=
 
+ALTERNATIVE_HOSTNAME=
+
 # Env var INSTANCE_ID should be set to the ID of some instance in Sentinel Hub
 # Configurator, which contains all the layers listed below it.
 INSTANCE_ID=
