--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,8 @@ BYOC_BBOX_EPSG3857_MAXY=
 S5PL2_LAYER_ID=
 LANDSAT8_LAYER_ID=
 LANDSAT8_NDVI_LAYER_ID=
+LANDSAT8_LOTL1_LAYER_ID=
+LANDSAT8_LOTL1_NDVI_LAYER_ID=
 
 EOC_INSTANCE_ID=
 EOC_S1GRDIW_LAYER_ID=
