--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,8 @@ LANDSAT8_LAYER_ID=
 LANDSAT8_NDVI_LAYER_ID=
 LANDSAT8_LOTL1_LAYER_ID=
 LANDSAT8_LOTL1_NDVI_LAYER_ID=
+LANDSAT8_LOTL2_LAYER_ID=
+LANDSAT8_LOTL2_NDVI_LAYER_ID=
 
 EOC_INSTANCE_ID=
 EOC_S1GRDIW_LAYER_ID=
