add stories for LTML1 and LTML2

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ LANDSAT8_LOTL1_LAYER_ID=
 LANDSAT8_LOTL1_NDVI_LAYER_ID=
 LANDSAT8_LOTL2_LAYER_ID=
 LANDSAT8_LOTL2_NDVI_LAYER_ID=
+LANDSAT45_LTML1_LAYER_ID=
+LANDSAT45_LTML1_NDVI_LAYER_ID=
+LANDSAT45_LTML2_LAYER_ID=
+LANDSAT45_LTML2_NDVI_LAYER_ID=
 
 EOC_INSTANCE_ID=
 EOC_S1GRDIW_LAYER_ID=
