--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^25.1.0",
+    "jest-canvas-mock": "^2.3.1",
     "node-fetch": "^2.6.0",
     "prettier": "^1.17.1",
     "rollup": "^0.67.0",
