--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -10,5 +10,5 @@ jobs:
     - run: npm install
     - run: npm run build
     - run: git add dist
-    - run: git commit -m "Build and commit dist"
+    - run: git config --local user.name "$GITHUB_ACTOR"
     - run: git push origin $GITHUB_REF
