--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -9,7 +9,13 @@ jobs:
     - uses: actions/checkout@v2
     - run: npm install
     - run: npm run build
+    - run: |
+        EMAIL=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/users/$GITHUB_ACTOR | jq -r .email)
+        git config --local user.name "$GITHUB_ACTOR"
+        git config --local user.email "$EMAIL"
     - run: git add dist
-    - run: git config --local user.name "$GITHUB_ACTOR"
     - run: git commit -m "Build and commit dist"
     - run: git push origin $GITHUB_REF
+
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
