delete dist before build

--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -15,8 +15,7 @@ jobs:
         EMAIL=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/users/$GITHUB_ACTOR | jq -r .email)
         git config --local user.name "$GITHUB_ACTOR"
         git config --local user.email "$EMAIL"
-    - run: git add dist
-    - run: git commit -m "Build and commit dist"
+    - run: git commit -a -m "Build and commit dist"
     - run: git push origin $GITHUB_REF
 
 env:
