set node version to 12

--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -7,6 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
     - run: npm install
     - run: rm -rf dist
     - run: git rm -r dist
