--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -11,8 +11,9 @@ jobs:
       with:
         node-version: 12
     - run: npm install
+    - if: -d dist
+      run: git rm -r dist
     - run: rm -rf dist
-    - run: git rm -r dist
     - run: npm run build
     - run: git config --local user.name "$GITHUB_ACTOR"
     - run: git config --local user.email "${{ github.event.pusher.name }}"
