--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -11,7 +11,7 @@ jobs:
       with:
         node-version: 12
     - run: npm install
-    - if: test -d dist
+    - if: [ -d dist ]
       run: git rm -r dist
     - run: rm -rf dist
     - run: npm run build
