--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -1,4 +1,4 @@
-name: Build and Deploy
+name: Build dist
 
 on: [push]
 
@@ -11,7 +11,16 @@ jobs:
       with:
         node-version: 12
     - run: npm install
-    - run: git rm -f -r dist
+    - name: Check file existence
+      id: check_files
+      uses: andstor/file-existence-action@v1
+      with:
+        files: "dist"
+
+    - name: File exists
+      if: steps.check_files.outputs.files_exists == 'true'
+      run: git rm -r dist
+
     - run: npm run build
     - run: git config --local user.name "$GITHUB_ACTOR"
     - run: git config --local user.email "${{ github.event.pusher.email }}"
