--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -7,13 +7,13 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [18]
 
     steps:
       - uses: actions/checkout@v1
 
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
 
