--- a/.github/workflows/on_release.yaml
+++ b/.github/workflows/on_release.yaml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: '12'
+          node-version: 18
 
       - name: Install packages
         if: success() && startsWith(github.ref, 'refs/tags/v')
