--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "dist/sentinelHub.cjs.js",
   "module": "dist/sentinelHub.esm.js",
   "browser": "dist/sentinelHub.umd.js",
-  "dependencies": {
+  "type": "module",
+  "dependencies": {},
+  "peerDependencies": {
     "@turf/area": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@types/proj4": "^2.5.2",
@@ -17,14 +19,21 @@
     "terraformer-wkt-parser": "^1.2.1",
     "xml2js": "^0.4.19"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "devDependencies": {
     "@babel/core": "^7.8.3",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
     "@storybook/html": "^5.3.3",
     "@types/jest": "^25.1.3",
     "@types/node-fetch": "^2.5.7",
     "@types/service-worker-mock": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
+    "@types/xml2js": "^0.4.4",
     "axios-mock-adapter": "^1.18.1",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.1.0",
@@ -36,10 +45,10 @@
     "jest-canvas-mock": "^2.3.1",
     "node-fetch": "^2.6.0",
     "prettier": "^1.17.1",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript2": "^0.20.1",
+    "rollup": "^4.19.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript2": "^0.36.0",
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^25.2.0",
     "typedoc": "^0.16.11",
