--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@storybook/html": "^5.3.3",
     "@types/jest": "^25.1.3",
     "@types/node-fetch": "^2.5.7",
-    "@types/service-worker-mock": "^2.0.1",
+    "@types/service-worker-mock": "^2.0.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "@types/xml2js": "^0.4.4",
@@ -52,7 +52,7 @@
     "service-worker-mock": "^2.0.5",
     "ts-jest": "^25.2.0",
     "typedoc": "^0.16.11",
-    "typescript": "^3.5.1"
+    "typescript": "5.5.4"
   },
   "scripts": {
     "build": "rollup -c",
