--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "outDir": "./dist",
     "target": "es2016",
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
 }
