--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "@turf/area": "^6.0.1",
     "@turf/helpers": "^6.1.4",
     "@types/proj4": "^2.5.2",
-    "@types/xml2js": "^0.4.4",
     "axios": "^0.21.1",
+    "fast-xml-parser": "^4.4.1",
     "moment": "^2.24.0",
     "polygon-clipping": "^0.14.3",
     "proj4": "^2.9.0",
     "query-string": "^6.4.2",
-    "terraformer-wkt-parser": "^1.2.1",
-    "xml2js": "^0.4.19"
+    "terraformer-wkt-parser": "^1.2.1"
   },
   "engines": {
     "node": ">=18"
@@ -30,7 +29,6 @@
     "@types/jest": "^25.1.3",
     "@types/node-fetch": "^2.5.7",
     "@types/service-worker-mock": "^2.0.4",
-    "@types/xml2js": "^0.4.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "axios-mock-adapter": "^1.18.1",
