--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "module": "dist/sentinelHub.esm.js",
   "browser": "dist/sentinelHub.umd.js",
   "type": "module",
-  "dependencies": {},
   "peerDependencies": {
     "@turf/area": "^6.0.1",
     "@turf/helpers": "^6.1.4",
@@ -31,18 +30,19 @@
     "@types/jest": "^25.1.3",
     "@types/node-fetch": "^2.5.7",
     "@types/service-worker-mock": "^2.0.4",
+    "@types/xml2js": "^0.4.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
-    "@types/xml2js": "^0.4.4",
     "axios-mock-adapter": "^1.18.1",
     "babel-loader": "^8.0.6",
     "concurrently": "^5.1.0",
     "dotenv": "^8.2.0",
     "eslint": "^8.57.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-config-prettier": "^9.1.0",
-    "jest": "^25.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
     "jest-canvas-mock": "^2.3.1",
+    "jest-environment-jsdom": "^29.7.0",
     "node-fetch": "^2.6.0",
     "prettier": "^3.3.3",
     "rollup": "^4.19.0",
@@ -50,7 +50,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript2": "^0.36.0",
     "service-worker-mock": "^2.0.5",
-    "ts-jest": "^25.2.0",
+    "ts-jest": "29.2.3",
     "typedoc": "^0.16.11",
     "typescript": "5.5.4"
   },
@@ -75,7 +75,7 @@
     },
     "moduleDirectories": [
       "node_modules",
-      "."
+      "<rootDir>"
     ],
     "testRegex": "/__tests__/.*\\.(ts|tsx|js)$",
     "testPathIgnorePatterns": [
@@ -83,7 +83,8 @@
       "/dist/",
       "fixtures[.].*[.]ts",
       "testUtils[.].*[.]ts"
-    ]
+    ],
+    "testEnvironment": "jsdom"
   },
   "types": "dist/src/index.d.ts",
   "files": [
