--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "rollup-plugin-typescript2": "^0.36.0",
     "service-worker-mock": "^2.0.5",
     "ts-jest": "29.2.3",
-    "typedoc": "^0.16.11",
+    "typedoc": "^0.26.5",
     "typescript": "5.5.4"
   },
   "scripts": {
@@ -62,7 +62,7 @@
     "prettier": "prettier --write \"{src,example,stories}/**/*.{ts,js}\"",
     "storybook": "concurrently --kill-others \"rollup -c -w\" \"start-storybook -p 6006 --quiet\"",
     "build-storybook": "build-storybook",
-    "build-doc": "typedoc --excludePrivate --excludeProtected --excludeNotExported --exclude '**/*__*' --out doc/ src/"
+    "build-doc": "typedoc --excludePrivate --excludeProtected --exclude '**/*__*' --out doc/ src/"
   },
   "jest": {
     "moduleFileExtensions": [
