--- a/.github/workflows/on_push.yaml
+++ b/.github/workflows/on_push.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           npm ci
           npm run lint
+          npm run build
 
       - name: Run tests
         run: |
