--- a/.github/workflows/on_release.yaml
+++ b/.github/workflows/on_release.yaml
@@ -6,6 +6,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write  # Required for trusted publishing (OIDC)
     steps:
       - uses: actions/checkout@v1
 
@@ -13,6 +16,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install packages
         if: success() && startsWith(github.ref, 'refs/tags/v')
@@ -23,18 +27,16 @@ jobs:
         if: success() && startsWith(github.ref, 'refs/tags/v')
         env:
           GITHUB_REF_TAG: ${{ github.ref }}
-          NPMJS_REGISTRY: registry.npmjs.org
-          NPMJS_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           echo "Extracting version from GITHUB_REF_TAG: $GITHUB_REF_TAG"
           export VERSION=$(echo "$GITHUB_REF_TAG" | sed -e "s#^refs/tags/##")
           echo "Version is $VERSION"
           npm version --no-git-tag-version "${VERSION}"
           npm run build
-          echo "//${NPMJS_REGISTRY}/:_authToken=${NPMJS_TOKEN}" > .npmrc
           [ $(echo "${VERSION}" | grep rc) ] && echo "publishing with next tag to npm - ${VERSION}" || echo "publishing with latest tag to npm - ${VERSION}"
-          [ $(echo "${VERSION}" | grep rc) ] && npm publish --access public --tag next || npm publish --access public
-          echo "Published to npm registry: ${NPMJS_REGISTRY}"
+          [ $(echo "${VERSION}" | grep rc) ] && npm publish --access public --tag next --provenance || npm publish --access public --provenance
+          echo "Published to npm registry"
           tar -cvzf /tmp/dist.tar.gz dist/
 
       - name: Create artifacts
