--- a/.github/workflows/on_release.yaml
+++ b/.github/workflows/on_release.yaml
@@ -18,6 +18,9 @@ jobs:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Upgrade npm
+        run: npm install -g npm@latest
+
       - name: Install packages
         if: success() && startsWith(github.ref, 'refs/tags/v')
         run: |
